# JunglesCppUtils

./: CMakeLists.txt  LICENSE.txt  README.md
jungles/: algorithm.hpp  callback.hpp  cross_correlation.hpp  function_traits.hpp  overload.hpp  singleton.hpp
test/: CMakeLists.txt  test_callback.cpp  test_singleton.cpp
